--- a/vignettes/LandSCENT.Rmd
+++ b/vignettes/LandSCENT.Rmd
@@ -387,6 +387,69 @@ DoLandSCENT.o <- DoLandSCENT(exp.m = Example.m, ppiA.m = net13Jun12.m,
                              PLOT = FALSE, PDF = FALSE)
 ```
 
+## Employ diffusion maps to infer differentiation trajectory
+
+In the latest update, we have integrated diffusion maps from package `destiny` with our potency estimation,i.e. SR values, to infer differentiation trajectory.
+
+Here we provide two functions:
+1. `DoDiffusionMap`: This fuction gives utility of constructing diffusion map and selecting the root cell of the tajectory.
+2. `Plot_DiffusionMap`: Based on the result of `DoDiffusionMap`, users can easily plot the diffusion maps with `Plot_DiffusionMap` function.
+
+### `DoDiffusionMap` function
+
+Typically, the main input of `DoDiffusionMap` would be the output from `InferLandmark` function. It also requires you to specify several arguments based on your own dataset:
+
+1. The *mean_gap*, *sd_gap* is the mean and standard deviation threshold for selecting highly variable genes(HVGs) inside function, respectively.
+2. The *root* argument has two type of choices: *cell* and *state*. 
+* *cell* means function will choose the root cell to be the one with the highest SR values among all the cells. 
+* *state* means the function will first cluster the high potency cells and choose a group of cells with highest cluster-median SR values. Then the root cell will be assigned to the highest SR valued cell inside the choosen cluster.
+3. The *num_comp* defines how many diffusion components you want to calculate. And this would influence the following plot procedure.
+4. *k* is the number of nearest neighbors to consider while constructing the diffusion maps.
+
+```{r DoDiffusionMap , eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE}
+DoDiffusionMap.o <- DoDiffusionMap(Integration.l,
+                                   mean_gap = 1, sd_gap = 1,
+                                   root = c("cell", "state"),
+                                   num_comp = 3,
+                                   k = 30)
+```
+
+In the output object `DoDiffusionMap.o`, three new elements will be added:
+
+1. A diffusion map object in *DM*
+2. The diffusion compoents in *DMEigen*
+3. The index of root cell is stored in *root*
+
+In case you do not like the way we generate the plot or you want to add some other stuff, these elements are easy to transfer.
+
+### `Plot_DiffusionMap` function
+
+This function is quite straightfoward. With aforementioned result `DoDiffusionMap.o`, one can easily run it with:
+
+```{r Plot_DiffusionMap1 , eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE}
+Plot_DiffusionMap(DoDiffusionMap.o,
+                  dim = c(1, 2, 3),
+                  color_by = "SR",
+                  phi = 20, theta = 30,
+                  PDF = FALSE)
+```
+
+![](SR.png)
+
+There two **NOTES** need to be addressed:
+
+1. For argument **dim**, this is a vector virable. It indicates **which** dimension to use and in what **order**. For example, *dim = c(1,2,3)* means use diffusion component 1,2 and 3 to generrate figures, and the x-axis relates to DC1, y-axis relates to DC2 and z-axis relates to DC3. However, *dim = c(2,3,5)* means x-axis relates to DC2, y-axis relates to DC3 and z-axis relates to DC5. Moreover, if the maximum dimension you choose here is larger than *num_comp* in `DoDiffusionMap` function, the plot would fail.
+2. We provide an option in **color_by** to be **DPT**, which gives a diffusion pseudotime(DPT) estimation. In some cases, like the cell number is too little, or the cell clusters are seprated too far with each other, the estimation may fail. So before you generate the figure with *DPT*, you may need to look into the diffusion map itself, and make sure the DPT estimation could be carry out correctly.
+
+```{r Plot_DiffusionMap2 , eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE}
+Plot_DiffusionMap(DoDiffusionMap.o,
+                  dim = c(1, 2),
+                  color_by = "DPT",
+                  PDF = FALSE)
+```
+
+![](DPT.png)
+
 ## Extract objects from function results
 
 If users provided `SingleCellExperiment` or `CellDataSet` objects as the input, it then can be easily to extract the *sce* or *cds* from the results. The *sce* or *cds* objects are stored in the list with name **data.sce** and **data.cds**, respectively. And SR values and potency states are already been added to their phenotype information, so you can get such information in the **colData** or **pData**, respectively.
