--- a/vignettes/LandSCENT.Rmd
+++ b/vignettes/LandSCENT.Rmd
@@ -438,7 +438,7 @@ Plot_DiffusionMap(DoDiffusionMap.o,
 
 There two **NOTES** need to be addressed:
 
-1. For argument **dim**, this is a vector virable. It indicates **which** dimension to use and in what **order**. For example, *dim = c(1,2,3)* means use diffusion component 1,2 and 3 to generrate figures, and the x-axis relates to DC1, y-axis relates to DC2 and z-axis relates to DC3. However, *dim = c(2,3,5)* means x-axis relates to DC2, y-axis relates to DC3 and z-axis relates to DC5. Moreover, if the maximum dimension you choose here is larger than *num_comp* in `DoDiffusionMap` function, the plot would fail.
+1. For argument **dim**, this is a vector virable. It indicates **which** dimension to use and in what **order**. For example, *dim = c(1,2,3)* means use diffusion component 1,2 and 3 to generrate figures, and the x-axis relates to DC1, y-axis relates to DC2 and z-axis relates to DC3. While *dim = c(2,3,5)* means x-axis relates to DC2, y-axis relates to DC3 and z-axis relates to DC5. More Importantly, the signs of elements in *dim* indicate the direction of diffusion components. For example, **dim = c(2,3,-5)** means x-axis relates to DC2, y-axis relates to DC3 and z-axis relates to **-DC5**. Moreover, if the maximum dimension you choose here is larger than *num_comp* in `DoDiffusionMap` function, the plot would fail.
 2. We provide an option in **color_by** to be **DPT**, which gives a diffusion pseudotime(DPT) estimation. In some cases, like the cell number is too little, or the cell clusters are seprated too far with each other, the estimation may fail. So before you generate the figure with *DPT*, you may need to look into the diffusion map itself, and make sure the DPT estimation could be carry out correctly.
 
 ```{r Plot_DiffusionMap2 , eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE}
